# lunalint

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/lunalint-cli/: Cargo.toml
crates/lunalint-cli/src/: main.rs
crates/lunalint-core/: Cargo.toml
crates/lunalint-core/src/: cfg.rs  context.rs  diagnostics.rs  lib.rs  location.rs  parse.rs  resolver.rs  utils.rs
crates/lunalint-core/src/pass/: count_down_loop.rs  global_in_nil_env.rs  lowercase_global.rs  mod.rs  undefined_global.rs  unicode_name.rs
crates/lunalint-core/src/resolver/: mod.rs
crates/lunalint-core/tests/: helper.rs  lua_test.rs
crates/lunalint-core/tests/lua/: count-down-loop.lua  global-in-nil-env.lua  lowercase-global.lua  parse-error.lua  undefined-global.lua  undefined-global2.lua  undefined-global3.lua  unicode-name.lua
crates/lunalint-core/tests/snapshots/: count_down_loop.snap  global_in_nil_env.snap  lowercase_global.snap  parse_error.snap  undefined_global.snap  undefined_global.snap.new  undefined_global2.snap  undefined_global3.snap  unicode_name.snap
crates/lunalint-server/: Cargo.toml
crates/lunalint-server/src/: main.rs
examples/: a.lua  bad_code.lua  env.lua  global.lua  unreach.lua
extension/: CHANGELOG.md  package-lock.json  package.json
extension/src/: extension.ts
lsp/: README.md
lsp/src/: extension.ts  extension.txt
src/: context.rs  diagnostics.rs  location.rs  main.rs  resolver.rs  utils.rs
src/pass/: count_down_loop.rs  global_in_nil_env.rs  lowercase_global.rs  mod.rs  undefined_global.rs  unicode_name.rs  utils.rs
