[package]
name = "lunalint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
full_moon = "0.19.0"
log = "0.4.22"
ariadne = { version = "0.4.1", features = ["auto-color"] }