[package]
name = "lunalint-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lunalint"
path = "src/main.rs"

[dependencies]
lunalint-core = { path = "../lunalint-core" }
clap = { version = "4.5.16", features = ["derive"] }
