[package]
name = "lunalint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
full_moon = { version = "0.19.0", features = ["lua52", "lua53", "lua54"] }
log = "0.4.22"
ariadne = { version = "0.4.1", features = ["auto-color"] }
parking_lot = "0.12.3"
num-bigint = "0.4.6"

[dev-dependencies]
insta = "1.39.0"
strip-ansi-escapes = "0.2.0"
